--- a/app/scss/index.scss
+++ b/app/scss/index.scss
@@ -9,17 +9,39 @@
 }
 
 html, body { margin: 0; padding: 0; background-color: RGB(246, 246, 247); }
+.gray {
+  color: RGB(194, 188, 189);
+}
 
 header {
   background-color: RGB(65, 88, 119);
   height: 130px;
   display: flex;
   align-items: center;
-  img {
-    display: block;
-    width: 856px;
-    height: 96px;
-    margin: auto;
+  min-width: 1090px;
+  .container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    img {
+      display: block;
+      width: 100px;
+      margin-right: 40px;
+      position: absolute;
+      left: 30px;
+      top: 50%;
+      transform: translateY(-50%);
+    }
+    .tlt {
+      color: white;
+      .top {
+        font-size: 46px;
+      }
+      .bottom {
+        font-size: 18px;
+      }
+    }
   }
 }
 
@@ -46,6 +68,7 @@ header {
     width: 100%;
     height: 100%;
     padding-top: 26px;
+    box-sizing: border-box;
   }
   .logo {
     position: absolute;
@@ -67,6 +90,8 @@ header {
   height: 435px;
   .column-1 {
     flex: 1 1 66.6%;
+    padding-right: 12px;
+    box-sizing: border-box;
   }
   .column-2 {
     flex: 1 1 33.3%;
@@ -89,14 +114,14 @@ header {
     flex-direction: row;
     .left {
       height: 300px;
-      width: 160px;
+      width: 110px;
       display: flex;
       .left-left {
         width: 33px;
         background: white;
         height: 100%;
-        font-size: 28px;
-        line-height: 28px;
+        font-size: 24px;
+        line-height: 25px;
         color: RGB(65, 88, 119);
         display: flex;
         flex-direction: column;
@@ -114,15 +139,15 @@ header {
         align-items: center;
         justify-content: center;
         .top {
-          font-size: 52px;
+          font-size: 30px;
         }
         .five {
-          font-size: 124px;
+          font-size: 90px;
         }
       }
     }
     .right {
-      width: 430px;
+      width: 480px;
     }
   }
   .column-2 {
@@ -188,21 +213,25 @@ header {
 }
 footer {
   width: 100%;
+  min-width: 1090px;
   margin-top: 100px;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  img {
-    width: 207px;
-    height: 49px;
-    display: block;
+  .source {
+    text-align: center;
+    color: RGB(65, 88, 119);
+    font-size: 18px;
   }
   .blue {
     margin-top: 12px;
     background-color: RGB(65, 88, 119);
     width: 100%;
     height: 30px;
+    .container {
+      background-color: RGB(65, 88, 119);
+    }
   }
 }
 .v1,
