--- a/app/scss/index.scss
+++ b/app/scss/index.scss
@@ -51,6 +51,7 @@ header {
   margin: auto;
   position: relative;
   font-family: 'gbk';
+  overflow: hidden;
   & > .row {
     margin-top: 40px;
   }
